SET(HTTPSRC            http_parser.c)

if ("${CMAKE_C_COMPILER_ID}" STREQUAL "Clang" OR "${CMAKE_C_COMPILER_ID}" STREQUAL "GNU")
	set(HTTP_COMPILE_FLAGS "${HTTP_COMPILE_FLAGS} -O3")
endif ()

ADD_LIBRARY(rmilter-http-parser STATIC ${HTTPSRC})
SET_TARGET_PROPERTIES(rmilter-http-parser PROPERTIES COMPILE_FLAGS "${HTTP_COMPILE_FLAGS}")